# ImperativeProgrammingCourse

./: .gitignore  CMakeLists.txt  main.c  mallocAllocFree.c  usefull.c  wstepDoC.c  z_lekcji.c
zad0/: fibb.c
zad1/: vectors.c
zad10/: vectors.c  vectors2.c
zad2/: permutacje.c  struktury.c  wojna.c
zad3/: stata.c
zad4/: czytaniePliku  czytaniePliku.c  czytaniev2  czytaniev2.c  dane.txt  findingIDs.c  finding_identifiers  finding_identifiers.c  finding_identifiersBEST.c  finding_identifiersV2.c  finding_identifiersV3.c  reading_file.c
zad5/: dane.out  dane0.in  dane0.out  equal.c  equalV2.c  equalV3.c  pom.c  rob.c
zad6/: dane.in  relations.c  relationsV2.c
zad7/: calki.c
zad8/: dane.txt  sol.c  sorts.c
zad9/: 2DTabs  2DTabs.c  dane5.txt
zzad10/: vectors2  vectors2.c
zzad11/: linkedlist1.c  linkedlist1janek.c
zzad12/: doubly_linkedlist.c  janek.c
zzad13/: HashT.c
