cmake_minimum_required(VERSION 3.24)
project(Nauka_C C)

set(CMAKE_C_STANDARD 11)

add_executable(Nauka_C main.c)

add_executable(fibb zad0/fibb.c)
add_executable(vectors zad1/vectors.c)
add_executable(wstepDoC wstepDoC.c)
add_executable(permutacje zad2/permutacje.c)
add_executable(struktury zad2/struktury.c)
add_executable(wojna zad2/wojna.c)
add_executable(stata zad3/stata.c)
add_executable(wojnaJanek zad2/wojnaJanek.c)
add_executable(czytaniePliku zad4/czytaniePliku.c)
add_executable(finding_identifiersV2 zad4/finding_identifiersV2.c)
add_executable(finding_identifiersV3 zad4/finding_identifiersV3.c)
add_executable(pom zad5/pom.c)
add_executable(equal zad5/equal.c)
add_executable(equalV2 zad5/equalV2.c)
add_executable(relations zad6/relations.c)
add_executable(relationsV2 zad6/relationsV2.c)
add_executable(calki zad7/calki.c)